# TP1-AEDS2-HASH_PATRICIA_TF-IFDF_INDICE_INVERTIDO

./: .gitignore  5.16a5.21-patricia.c  CMakeLists.txt  README.md  anotacoes-branch-Joao.txt  anotacoes-branch.txt  hashTablePalavras.c  hashTablePalavras.h  listaEncadDocs.c  listaEncadDocs.h  listaEncadPares.c  listaEncadPares.h  main  main.c  operacoesIndiceInvertido.c  operacoesIndiceInvertido.h  patricia.c  patricia.h  tempCodeRunnerFile.c  testePat.c  testeeee  testesGuto.c  testesJoao.c  tipoPalavra.c  tipoPalavra.h
LeituraDeArquivos/: a.out  arquivo01  arquivo02  arquivo03  entrada  lerArquivo.c
textos/: arquivo1.txt  arquivo10.txt  arquivo100.txt  arquivo13.txt  arquivo15.txt  arquivo18.txt  arquivo2.txt  arquivo20.txt  arquivo24.txt  arquivo25.txt  arquivo27.txt  arquivo31.txt  arquivo32.txt  arquivo33.txt  arquivo34.txt  arquivo36.txt  arquivo37.txt  arquivo38.txt  arquivo39.txt  arquivo40.txt  arquivo41.txt  arquivo42.txt  arquivo43.txt  arquivo44.txt  arquivo45.txt  arquivo46.txt  arquivo47.txt  arquivo48.txt  arquivo49.txt  arquivo5.txt  arquivo50.txt  arquivo51.txt  arquivo52.txt  arquivo53.txt  arquivo54.txt  arquivo55.txt  arquivo56.txt  arquivo57.txt  arquivo58.txt  arquivo59.txt  (+58 more)
tp01_build/: CMakeCache.txt  Makefile  cmake_install.cmake  main
